[package]
name = "transmogrify"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2pipe = "0.5.0"
tui = "0.13.0"
termion = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capstone = "0.7.0"
keystone = { git = "https://github.com/keystone-engine/keystone" }
structopt = "0.3"